# frieren

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
cmake/: frierenConfig.cmake.in  templConfig.cmake.in
include/: templ.h
include/aircraft/: Params.h  State.h
include/physics/: Forces.h  Gravity.h
include/simulator/: Simulator.h
src/: templ.cpp
src/physics/: Gravity.cpp
src/simulator/: Simulator.cpp
test/: simulator.cpp  templ_test.cpp
